<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context="com.example.rmatos.trivia_whatyear.MainActivity">


    <TextView
        android:id="@+id/tw_Title"
        android:text="What Year?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/title"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_play"
        android:text="@string/play"
        android:onClick="onPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_category"
        android:text="@string/categories"
        android:onClick="onCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"/>

    <Button
        android:id="@+id/btn_highscores"
        android:text="@string/highscores"
        android:onClick="onHighscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"/>


</RelativeLayout>
